unpackaged/main/default/objects/RFP_Quote__c/RFP_Quote__c.object-meta.xml
<CustomObject>
    <label>RFP Quote</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>RFP Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFP Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>