unpackaged/main/default/objects/RFP_Quote__c/fields/Capped_Amount__c.field-meta.xml
<CustomField>
    <fullName>Capped_Amount__c</fullName>
    <label>Capped Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>