unpackaged/main/default/objects/RFP_Quote__c/fields/Closing_and_Post_Closing_Matters__c.field-meta.xml
<CustomField>
    <fullName>Closing_and_Post_Closing_Matters__c</fullName>
    <label>Closing and Post Closing Matters</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>