unpackaged/main/default/objects/RFP_Quote__c/fields/Conflict_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Conflict_of_Interest__c</fullName>
    <inlineHelpText>Please select Yes/No to indicate if your firm has a conflict of interest relating to this RFP</inlineHelpText>
    <label>Conflict of Interest?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>