unpackaged/main/default/objects/RFP_Quote__c/fields/Conflict_of_Interest_Details__c.field-meta.xml
<CustomField>
    <fullName>Conflict_of_Interest_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If your firm has a conflict of interest, please explain the conflict of interest and parties involved</inlineHelpText>
    <label>Conflict of Interest Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>