unpackaged/main/default/objects/RFP_Quote__c/fields/Continue_with_Process__c.field-meta.xml
<CustomField>
    <fullName>Continue_with_Process__c</fullName>
    <label>Continue with Process?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continue</fullName>
            </value>
            <value>
                <fullName>Withdraw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>