unpackaged/main/default/objects/RFP_Quote__c/fields/Decline_to_Participate__c.field-meta.xml
<CustomField>
    <fullName>Decline_to_Participate__c</fullName>
    <inlineHelpText>Select Continue if you choose to move forward with this RFP response or select Withdraw if you choose to decline participation</inlineHelpText>
    <label>Decline to Participate?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continue</fullName>
            </value>
            <value>
                <fullName>Withdraw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>