unpackaged/main/default/objects/RFP_Quote__c/fields/Financing_and_Security_Documents__c.field-meta.xml
<CustomField>
    <fullName>Financing_and_Security_Documents__c</fullName>
    <label>Financing and Security Documents</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>