unpackaged/main/default/objects/RFP_Quote__c/fields/Firm__c.field-meta.xml
<CustomField>
    <fullName>Firm__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Firm</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Law Firm</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RFP Quotes</relationshipLabel>
    <relationshipName>RFP_Quotes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>