unpackaged/main/default/objects/RFP_Quote__c/fields/Firm_Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Firm_Assumptions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If edits to RFP assumptions are required, please copy and paste the assumptions from the RFP here with any edits</inlineHelpText>
    <label>Firm Assumptions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>