unpackaged/main/default/objects/RFP_Quote__c/fields/Legal_Due_Diligence_And_Report__c.field-meta.xml
<CustomField>
    <fullName>Legal_Due_Diligence_And_Report__c</fullName>
    <label>Legal Due Diligence and Report</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>