unpackaged/main/default/objects/RFP_Quote__c/fields/Project_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Project_Attorney__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Attorney</label>
    <type>Email</type>
</CustomField>