unpackaged/main/default/objects/RFP_Quote__c/fields/Reason_for_Withdrawal__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Withdrawal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If Withdrawal was selected for Continue with Process, please provide the reason your firm is withdrawing</inlineHelpText>
    <label>Reason for Withdrawal</label>
    <type>TextArea</type>
</CustomField>