unpackaged/main/default/objects/RFP_Quote__c/fields/RFP_Initiation__c.field-meta.xml
<CustomField>
    <fullName>RFP_Initiation__c</fullName>
    <label>RFP Initiation</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>RFP_Initiation__c.Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RFP_Initiation__c</referenceTo>
    <relationshipLabel>RFP Quotes</relationshipLabel>
    <relationshipName>RFP_Quotes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>