unpackaged/main/default/objects/RFP_Quote__c/fields/Scope_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Work__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please enter any changes to Scope of Work here</inlineHelpText>
    <label>Scope of Work</label>
    <type>TextArea</type>
</CustomField>