unpackaged/main/default/objects/RFP_Quote__c/fields/Tax_If_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Tax_If_Applicable__c</fullName>
    <inlineHelpText>Please consult with the IDB Invest attorney if a tax amount needs to be applied</inlineHelpText>
    <label>Tax (If applicable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>