unpackaged/main/default/objects/RFP_Quote__c/fields/Term_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Term_Sheet__c</fullName>
    <label>Term Sheet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>