unpackaged/main/default/objects/RFP_Quote__c/fields/Total_Estimated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Amount__c</fullName>
    <formula>Total_Expenses__c + Total_Fees__c +  Closing_and_Post_Closing_Matters__c  +  Term_Sheet__c  +  Financing_and_Security_Documents__c + Legal_Due_Diligence_And_Report__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Estimated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>