unpackaged/main/default/objects/RFP_Quote__c/listViews/MY_RFP_Quotes.listView-meta.xml
<ListView>
    <fullName>MY_RFP_Quotes</fullName>
    <columns>NAME</columns>
    <columns>Firm__c</columns>
    <columns>Total_Estimated_Amount__c</columns>
    <columns>Conflict_of_Interest__c</columns>
    <columns>RFP_Initiation__c</columns>
    <filterScope>Mine</filterScope>
    <label>My RFP Quotes</label>
</ListView>